buffer: Fix memory copying logic in copy_into()

https://bugzilla.gnome.org/show_bug.cgi?id=695035